# openpi-kmd

./: README.md  pyproject.toml
scripts/: serve_policy_kmd_joint.py
src/openpi/policies/: aloha7_policy.py
vla_helpers/: openpi_client_policy_http_kmd_joint.py  openpi_client_policy_ros2_kmd_joint.py  openpi_policy_shared.py
vlahost/: README.md  package.xml  setup.cfg  setup.py
vlahost/launch/: vlahost_server.launch.py
vlahost/vlahost/: client.py  server.py
vlahost/vlahost/html/: debug.html
